Fixed breadcrumb alignment of the search result

--- a/app/assets/stylesheets/help-central/_search.scss
+++ b/app/assets/stylesheets/help-central/_search.scss
@@ -90,6 +90,10 @@
     text-align: left;
     margin-bottom: 20px;
   }
+
+  .question-list-content span {
+    text-align: left;
+  }
 }
 
 .search-empty {
